Add blank editor page with nav button

--- a/src/index.css
+++ b/src/index.css
@@ -32,3 +32,14 @@ code {
   cursor: pointer;
   font-size: 16px;
 }
+
+.parent--nav-button {
+  border-radius: 8px;
+  padding: 12px 12px;
+  background-color: rgb(102, 94, 94);
+  color: #fff;
+  border: 1px solid rgba(246, 67, 28, 0.151);
+  cursor: pointer;
+  font-size: 12px;
+  margin-top: 20px;
+}
